--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "type": "project",
     "require": {
         "php": "^7.3|^8.0",
-        "hushulin/laravel-eloquent-rqlite": "^1.2",
+        "hushulin/laravel-eloquent-rqlite": "1.2.9",
         "laravel/lumen-framework": "^8.3.1"
     },
     "require-dev": {
@@ -37,5 +37,11 @@
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ]
-    }
+    },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/hushulin/laravel-eloquent-rqlite"
+        }
+    ]
 }
